--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background-color:#6347ee;
+body {background-color:#ffe8cd;
 text-align: center;
 color: white;}
 
@@ -30,12 +30,12 @@ color: white;}
     display: inline-block;
     width: 50%;
     height: 50%;
-    background-color: #2c19ad;
+    background-color: #ed6452;
     border-radius: 10px;
 }
 
 .info {display: inline-block;
-background-color: #4930cd;
+background-color: #c94738;
 height: 50%;
 width: 50%;
 border-radius: 10px;}
