--- a/style.css
+++ b/style.css
@@ -4,14 +4,20 @@ color: white;}
 
 
 h1 {font-family: Arial, Helvetica, sans-serif;
-font-size: 40px;
+font-size: 40px; 
 color: white;
 display: block;
+}
+
+@media screen and (max-width: 600px) { h1 {font-size: 20px;}
+    
 }
 
 input {width: auto;
     background-color: #2c2842;
 height: 30px;
+color: white;
+text-align: center;
 border-radius: 10px;
 border-color: black;}
 
