--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@ color: white;
 display: block;
 }
 
-@media screen and (max-width: 600px) { h1 {font-size: 20px;}
+@media screen and (max-width: 600px) {
+     h1 {font-size: 20px}
+     .calculadora, .info {padding: 80px;
+    }
     
 }
 
